Spacing fix for albumdisplay

--- a/css/style.css
+++ b/css/style.css
@@ -378,14 +378,14 @@ blockquote {
 }
 
 .albumdisplay {
-	 display: flex;
+	display: flex;
     align-items: center;
-    width: 90vw;
-	margin: 0 auto;
+	margin: 15px auto;
 	font-size: 1.1em;
-	padding: 10px 15px 10px 15px;
+	padding: 15px;
 	border-radius: 15px;
 	background-color: #FFFFFF25;
+	width: 90%;
 }
 
 .album-credits {
